# hi3861v100

K210/: main.py  model-129386.kmodel  report.json
app/: app.json  project.config.json  project.private.config.json
app/pages/Utf8ArrayToStr/: Utf8ArrayToStr.js  Utf8ArrayToStr.wxml
app/pages/index/: index.js  index.wxml  index.wxss
app/pages/index/Utf8ArrayToStr/: Utf8ArrayToStr.js  Utf8ArrayToStr.wxss
app/pages/setIP/: setIP.js  setIP.wxml
hi3861_1/: tools
hi3861_1/analyzerJson/: funcstack.json
hi3861_1/analyzerJson/cfg/: funcptr.txt
hi3861_1/src/: ohos_config.json
hi3861_1/src/applications/sample/wifi-iot/app/: BUILD.gn
hi3861_1/src/applications/sample/wifi-iot/app/D4_iot_tcp_server/: BUILD.gn  tcp_server_demo.c
hi3861_1/src/applications/sample/wifi-iot/app/D4_iot_tcp_server/src/: wifi_connect.c
hi3861_1/src/applications/sample/wifi-iot/app/car_clin/: BUILD.gn  control.c
hi3861_1/src/applications/sample/wifi-iot/app/car_clin/include/: E53_IS1.h  io_init.h  speed_control.h  uart.h
hi3861_1/src/applications/sample/wifi-iot/app/car_clin/src/: E53_IS1.c  io_init.c  speed_control.c  uart.c
hi3861_1/src/applications/sample/wifi-iot/app/demolink/: BUILD.gn  helloworld.c
hi3861_1/src/applications/sample/wifi-iot/app/iothardware/: BUILD.gn  uart.c
hi3861_1/src/applications/sample/wifi-iot/app/sg92r_demo/: BUILD.gn  sg92r_control.c
hi3861_1/src/applications/sample/wifi-iot/app/sg92r_demo/include/: temperature.h
hi3861_1/src/applications/sample/wifi-iot/app/sg92r_demo/src/: E53_IS1.c  temperature.c
hi3861_1/src/device/hisilicon/hispark_pegasus/sdk_liteos/: .sconsign.dblite
hi3861_1/src/device/hisilicon/hispark_pegasus/sdk_liteos/app/wifiiot_app/init/: app_io_init.c
