# Copyright (c) 2020 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

static_library("example_demolink") {
    sources = [
        "helloworld.c"
    ]

    include_dirs = [
        "//utils/native/lite/include",
        "//domains/iot/link/libbuild",
         "//commonlibrary/utils_lite/include",
        "//kernel/liteos_m/components/cmsis/2.0",
        "//base/iot_hardware/peripheral/interfaces/kits",
        "//device/soc/hisilicon/hi3861v100/sdk_liteos/include",
        "//base/iothardware/peripheral/interfaces/inner_api",
        "//foundation/communication/wifi_lite/interfaces/wifiservice",
        "//vendor/hisilicon/hispark_pegasus/demo/oc_demo",
        "//device/hisilicon/hispark_pegasus/hi3861_adapter/kal/cmsis",
        "//base/hiviewdfx/hiview_lite"
    ]
}
